// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsInstalled should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <p
        class="el-has-grey-text el-body-text"
      >
        The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
         
        <a>
          see here
        </a>
        .
      </p>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="appName"
                placeholder="Filter by App Name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Filter by App Name
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="6"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            App Name
          </div>
          <div
            class="el-table-header"
          >
            Customer Code
          </div>
          <div
            class="el-table-header"
          >
            Date Installed
          </div>
          <div
            class="el-table-header"
          >
            Installed By
          </div>
          <div
            class="el-table-header"
          >
            Date Uninstalled
          </div>
          <div
            class="el-table-header"
          >
            Uninstalled By
          </div>
          <div
            class="el-table-header"
          >
            Uninstall
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="App Name"
              >
                MOCK_APP_NAME
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Uninstalled"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Uninstalled By"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="App Name"
              >
                MOCK_APP_NAME_TWO
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Uninstalled"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Uninstalled By"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h1
      class="el-title"
    >
      Installations
    </h1>
    <p
      class="el-has-grey-text el-body-text"
    >
      The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
       
      <a>
        see here
      </a>
      .
    </p>
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="appName"
              placeholder="Filter by App Name"
              type="search"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Filter by App Name
            </label>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-mb11 el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="6"
    >
      <div
        class="el-table-headers-row"
      >
        <div
          class="el-table-header"
        >
          App Name
        </div>
        <div
          class="el-table-header"
        >
          Customer Code
        </div>
        <div
          class="el-table-header"
        >
          Date Installed
        </div>
        <div
          class="el-table-header"
        >
          Installed By
        </div>
        <div
          class="el-table-header"
        >
          Date Uninstalled
        </div>
        <div
          class="el-table-header"
        >
          Uninstalled By
        </div>
        <div
          class="el-table-header"
        >
          Uninstall
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="App Name"
            >
              MOCK_APP_NAME
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Uninstalled"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Uninstalled By"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cta-cell"
          >
            <div
              class="el-table-cta-icon-container"
            >
              <span
                class="el-intent-primary el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="App Name"
            >
              MOCK_APP_NAME_TWO
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Uninstalled"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Uninstalled By"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cta-cell"
          >
            <div
              class="el-table-cta-icon-container"
            >
              <span
                class="el-intent-primary el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-pagination-wrap"
    >
      <div
        class="el-pagination-text"
      >
        <input
          class="el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsInstalled should match a snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <p
        class="el-has-grey-text el-body-text"
      >
        The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
         
        <a>
          see here
        </a>
        .
      </p>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="appName"
                placeholder="Filter by App Name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Filter by App Name
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-loader-container"
      >
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h1
      class="el-title"
    >
      Installations
    </h1>
    <p
      class="el-has-grey-text el-body-text"
    >
      The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
       
      <a>
        see here
      </a>
      .
    </p>
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="appName"
              placeholder="Filter by App Name"
              type="search"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Filter by App Name
            </label>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-loader-container"
    >
      <div
        class="el-loader"
      >
        <div
          class="el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsInstalled should match a snapshot when no installations 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <p
        class="el-has-grey-text el-body-text"
      >
        The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
         
        <a>
          see here
        </a>
        .
      </p>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="appName"
                placeholder="Filter by App Name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Filter by App Name
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No installations for the application.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h1
      class="el-title"
    >
      Installations
    </h1>
    <p
      class="el-has-grey-text el-body-text"
    >
      The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
       
      <a>
        see here
      </a>
      .
    </p>
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="appName"
              placeholder="Filter by App Name"
              type="search"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Filter by App Name
            </label>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        No installations for the application.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsInstalled should match a snapshot when no response 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <p
        class="el-has-grey-text el-body-text"
      >
        The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
         
        <a>
          see here
        </a>
        .
      </p>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="appName"
                placeholder="Filter by App Name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Filter by App Name
              </label>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h1
      class="el-title"
    >
      Installations
    </h1>
    <p
      class="el-has-grey-text el-body-text"
    >
      The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
       
      <a>
        see here
      </a>
      .
    </p>
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="appName"
              placeholder="Filter by App Name"
              type="search"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Filter by App Name
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsInstalled should match a snapshot when not an admin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    />
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-intent-danger el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          You do not have permission to view this page.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-intent-danger el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="el-pn-content"
      >
        You do not have permission to view this page.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsInstalled should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="el-snack-holder"
      />
      <h1
        class="el-title"
      >
        Installations
      </h1>
      <p
        class="el-has-grey-text el-body-text"
      >
        The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
         
        <a>
          see here
        </a>
        .
      </p>
      <form>
        <div
          class="el-mb11 el-form-layout"
        >
          <div
            class="el-input-wrap"
          >
            <div
              class="el-input-group"
            >
              <input
                class="el-input"
                id="test-static-id"
                name="appName"
                placeholder="Filter by App Name"
                type="search"
              />
              <label
                class="el-label"
                for="test-static-id"
              >
                Filter by App Name
              </label>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-mb11 el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="6"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            App Name
          </div>
          <div
            class="el-table-header"
          >
            Customer Code
          </div>
          <div
            class="el-table-header"
          >
            Date Installed
          </div>
          <div
            class="el-table-header"
          >
            Installed By
          </div>
          <div
            class="el-table-header"
          >
            Date Uninstalled
          </div>
          <div
            class="el-table-header"
          >
            Uninstalled By
          </div>
          <div
            class="el-table-header"
          >
            Uninstall
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="App Name"
              >
                MOCK_APP_NAME
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Code"
              >
                RES
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                23-03-2022
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Uninstalled"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Uninstalled By"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="App Name"
              >
                MOCK_APP_NAME_TWO
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Customer Code"
              >
                MXX
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Installed"
              >
                11-01-2022
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Installed By"
              >
                <a
                  href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                  rel="noreferrer"
                  target="_blank"
                >
                  example@mail.com
                </a>
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Date Uninstalled"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cell"
            >
              <div
                class="el-table-cell-content"
                data-narrow-label="Uninstalled By"
              >
                -
              </div>
            </div>
            <div
              class="el-table-cta-cell"
            >
              <div
                class="el-table-cta-icon-container"
              >
                <span
                  class="el-intent-primary el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-pagination-wrap"
      >
        <div
          class="el-pagination-text"
        >
          <input
            class="el-pagination-input"
            value="1"
          />
           of 
          1
        </div>
        <button
          class="el-pagination-button"
          data-testid="back-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
        <button
          class="el-pagination-button"
          data-testid="forward-button"
          type="button"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <h1
      class="el-title"
    >
      Installations
    </h1>
    <p
      class="el-has-grey-text el-body-text"
    >
      The table below gives you the information about Reapit AppMarket apps and integrations you have installed currently or previously. In addition, you can uninstall apps for all users of your organisation by using the call to action on each row. For more information on the installations table
       
      <a>
        see here
      </a>
      .
    </p>
    <form>
      <div
        class="el-mb11 el-form-layout"
      >
        <div
          class="el-input-wrap"
        >
          <div
            class="el-input-group"
          >
            <input
              class="el-input"
              id="test-static-id"
              name="appName"
              placeholder="Filter by App Name"
              type="search"
            />
            <label
              class="el-label"
              for="test-static-id"
            >
              Filter by App Name
            </label>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-mb11 el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="6"
    >
      <div
        class="el-table-headers-row"
      >
        <div
          class="el-table-header"
        >
          App Name
        </div>
        <div
          class="el-table-header"
        >
          Customer Code
        </div>
        <div
          class="el-table-header"
        >
          Date Installed
        </div>
        <div
          class="el-table-header"
        >
          Installed By
        </div>
        <div
          class="el-table-header"
        >
          Date Uninstalled
        </div>
        <div
          class="el-table-header"
        >
          Uninstalled By
        </div>
        <div
          class="el-table-header"
        >
          Uninstall
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="App Name"
            >
              MOCK_APP_NAME
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Customer Code"
            >
              RES
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              23-03-2022
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Uninstalled"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Uninstalled By"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cta-cell"
          >
            <div
              class="el-table-cta-icon-container"
            >
              <span
                class="el-intent-primary el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="App Name"
            >
              MOCK_APP_NAME_TWO
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Customer Code"
            >
              MXX
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Installed"
            >
              11-01-2022
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Installed By"
            >
              <a
                href="mailto:example@mail.com?subject=Installation%20of%20MOCK_APP_NAME_TWO%20in%20the%20Reapit%20AppMarket"
                rel="noreferrer"
                target="_blank"
              >
                example@mail.com
              </a>
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Date Uninstalled"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cell"
          >
            <div
              class="el-table-cell-content"
              data-narrow-label="Uninstalled By"
            >
              -
            </div>
          </div>
          <div
            class="el-table-cta-cell"
          >
            <div
              class="el-table-cta-icon-container"
            >
              <span
                class="el-intent-primary el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="el-pagination-wrap"
    >
      <div
        class="el-pagination-text"
      >
        <input
          class="el-pagination-input"
          value="1"
        />
         of 
        1
      </div>
      <button
        class="el-pagination-button"
        data-testid="back-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </button>
      <button
        class="el-pagination-button"
        data-testid="forward-button"
        type="button"
      >
        <span
          class="el-icon"
        >
          <svg />
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
